--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "build:mac": "tsc && vite build && electron-builder --mac",
-    "build:win": "tsc && vite build && electron-builder --win",
+    "build:win": "tsc && vite build && electron-builder --win --x64",
     "build:all": "tsc && vite build && electron-builder -mw",
     "preview": "vite preview"
   },
